feat: add task granularity merge assistance